--- a/Udacity Write a Blog.ipynb
+++ b/Udacity Write a Blog.ipynb
@@ -628,12 +628,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "171d2586",
+   "cell_type": "markdown",
+   "id": "40c2f935",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 1 - Conclusion:\n",
+    "\n",
+    "You can see that most properties are located in and around the centre of London, with most properties being either private rooms or entire homes."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -738,11 +740,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ccb2abd5",
+   "execution_count": 22,
+   "id": "dd93ad79",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Private Room - mean distance from centre:  12.72441203627373\n",
+      "Entire Home - mean distance from centre:  9.41066258813766\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate mean distance from centre for two main categories\n",
+    "print('Private Room - mean distance from centre: ', geo_df[geo_df['room_type']== 'Private room']['dist_from_centre'].mean())\n",
+    "print('Entire Home - mean distance from centre: ', geo_df[geo_df['room_type']== 'Entire home/apt']['dist_from_centre'].mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a017979",
+   "metadata": {},
+   "source": [
+    "Question 2 - Conclusion:\n",
+    "\n",
+    "The distribution of the distance from this point is shown by property type. Entire homes have a narrower spread than private rooms with an average distance of about 9 km, with private rooms having an average of 13 km distance from the centre."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -754,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "944ff5c4",
    "metadata": {},
    "outputs": [
@@ -780,12 +805,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4f7adeb",
+   "cell_type": "markdown",
+   "id": "f88972a4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 3 - Conclusion\n",
+    "\n",
+    "The plot shows that in general entire homes follow a pattern of decreasing average price with distance from centre, whereas private rooms are relatively consistently priced irrespective of distance."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -797,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "96ac42ef",
    "metadata": {},
    "outputs": [
@@ -823,8 +850,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dbfaab24",
+   "metadata": {},
+   "source": [
+    "Overall availability shows a U-shaped distribution - with more properties with zero or full availability than those inbetween.\n",
+    "Private rooms are more likely to have full availability"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "a287f69d",
    "metadata": {},
    "outputs": [
@@ -850,12 +886,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d0db0de",
+   "cell_type": "markdown",
+   "id": "b4e3bbd5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 4 - Conclusion\n",
+    "\n",
+    "This distribution is different to price, with no real pattern being observable. The main observation is a number of properties have either full availability or none at all, irrespective of distance."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -867,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "989289a1",
    "metadata": {},
    "outputs": [
@@ -877,7 +915,7 @@
      "text": [
       "how many amenities are there overall?:  2308\n",
       "first 50 values: \n",
-      " ['', 'Fiils - Natural Chemical Free - Refillable Bottles conditioner', 'Bose bluetooth speaker sound system', 'Baylis & Harding', 'Lacura -Uplifting shower gel  body soap', 'Common one conditioner', 'Keypad', '38 TV with standard cable', 'Sea Kelp body soap', 'Amazon Alexa Bluetooth sound system', 'normal shampoo shampoo', 'Miele  refrigerator', 'Caroline Henry  body soap', 'jbl in bulbs Bluetooth sound system', 'Cien shampoo', 'Natural soap body soap', 'induction stove', '58 HDTV', 'Fast wifi  219 Mbps', 'dove or other brands body soap', 'Fast wifi  110 Mbps', 'Russell Hobbs under the counter fridge and freezer  refrigerator', 'jbl speakers in bulbs Bluetooth sound system', 'Kinsey Apothecary conditioner', 'Kinsey Apothecary shampoo', 'Any conditioner', 'Free dryer  In unit', 'Bose  Bluetooth sound system', 'Wifi  39 Mbps', 'Cole & Lewis body soap', 'Faith in Nature - Wild Rose (100% nature fragrance', 'Herbal Essences  conditioner', 'Samsung  gas stove', '37 HDTV', 'Washer u00a0In unit', 'Fast wifi  398 Mbps', 'Aeg refrigerator', 'Zanussi gas stainless steel stove', 'Clothing storage: dresser and walk-in closet', 'Siemens for Induction and Bosch for electric oven induction stove', 'mix body soap', 'All brands body soap', 'Original Source Sea Salt and Samphire Shower Gel  body soap', 'HDTV with standard cable', 'standard  conditioner', 'Baby monitor', 'liquid handwash body soap', '54 HDTV', '50 HDTV with premium cable', 'Decen 25 Liters Mini Oven oven']\n"
+      " ['', 'Hotpoint oven', 'Aromacure body soap', 'Lamona gas stove', 'Panthene or Sea Kelp by Fine Scottish Soap Co.  conditioner', 'Sage Pro oven', 'The White  Company  body soap', 'SONY sound system with aux', 'Natura Siberia conditioner', 'Common one shampoo', 'Faith in nature (lavender and geranium) body soap', 'Space in Built in Fridge freeze refrigerator', 'Neff refrigerator', 'Organic  body soap', 'private refrigerator', 'IKEA  induction stove', 'Shower body soap', 'Unknown  body soap', 'different brands body soap', 'whirlpool  refrigerator', 'Panasonic home entertainment system sound system with Bluetooth and aux', 'Wifi  46 Mbps', '4 ring hob electric stove', 'Wine glasses', 'Falcon - 6 hob', 'Just for you  conditioner', 'Fast wifi  110 Mbps', 'Wifi  22 Mbps', 'Childrens books and toys for ages 2-5 years old', '113 TV with Netflix', 'Any conditioner', 'Long term stays allowed', 'Wifi  25 Mbps', 'B&W/ Marantz/ Pioneer - please ask how to use it sound system with Bluetooth and aux', 'and wardrobe', 'Gaggenau  refrigerator', 'Gas cooker only oven', 'Neff  gas stove', 'bush refrigerator', 'Bose  sound system with Bluetooth and aux', 'Paid parking on premises  7 spaces', 'Clothing storage: dresser and closet', 'variable shampoo', 'Microwave/combi oven', 'SONOS Bluetooth sound system', 'Panasonic  sound system', 'Sony Surround Sound sound system with Bluetooth and aux', 'Multiple  shampoo', 'Pantene or Sea Kelp by Scottish Fine Soaps conditioner', 'Fast wifi  113 Mbps']\n"
      ]
     }
    ],
@@ -912,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "d4d236e6",
    "metadata": {},
    "outputs": [],
@@ -923,17 +961,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "538274b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2292eeb1a30>"
+       "<seaborn.axisgrid.FacetGrid at 0x1e616400f70>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -957,7 +995,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
+   "id": "388172f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Private Room - mean amenities:  21.555976916735368\n",
+      "Entire Home - mean amenities:  27.165145859256185\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate mean number of amanities for two main categories\n",
+    "print('Private Room - mean amenities: ', geo_df[geo_df['room_type']== 'Private room']['number_of_amenities'].mean())\n",
+    "print('Entire Home - mean amenities: ', geo_df[geo_df['room_type']== 'Entire home/apt']['number_of_amenities'].mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3bea943",
+   "metadata": {},
+   "source": [
+    "Observation: number of amenities is pretty similar between private rooms and entire homes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "00375c70",
    "metadata": {},
    "outputs": [
@@ -983,20 +1050,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f15df70",
+   "cell_type": "markdown",
+   "id": "4afa0126",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66d057d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 5 - Conclusion\n",
+    "\n",
+    "Interestingly this shows more variance than the availability distribution. Hotels do not appear to claim every item as an amenity and there appears to be a trend that entire homes have fewer average amenities the further from the centre they are.\n",
+    "\n",
+    "The interesting fact for me is that it appears that private rooms appear to often claim as many amenities as an entire home, which does make you wonder how much space is left over to sleep in the room!"
+   ]
   }
  ],
  "metadata": {
